update to be able to load mondo only for testing